Fixed wrap color background issue

--- a/includes/admin/css/greenmetrics-admin.css
+++ b/includes/admin/css/greenmetrics-admin.css
@@ -82,7 +82,8 @@
 }
 
 /* Add shadow to admin wrap to make it look like a card */
-.wrap {
+.greenmetrics_page_greenmetrics_display .wrap,
+.toplevel_page_greenmetrics .wrap {
 	background: #f8f9fa;
 	padding: 20px;
 	border-radius: 16px;
